--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>BE-Prototype</title>
-    <link rel="stylesheet" href="/main.css" />
+    <link rel="stylesheet" href="/BE-Link/main.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
@@ -27,7 +27,7 @@
         <div class="row">
           <div class="col-md-12">
             <a href="/" id="logo">
-              <img src="/BE_logo.svg" alt="Benjamin Edgar" />
+              <img src="/BE-Link/BE_logo.svg" alt="Benjamin Edgar" />
             </a>
           </div>
         </div>
@@ -54,7 +54,7 @@
       </div>
 
       <div class="product">
-        <img src="/cig.jpg" clas="product-image" />
+        <img src="/BE-Link/cig.jpg" clas="product-image" />
         <div class="description">
           <a href="#">
             Single Cigarette Holder in Stainless Steel
@@ -64,6 +64,6 @@
       </div>
     </div>
   </body>
-  <script src="/index.js"></script>
+  <script src="/BE-Link/index.js"></script>
   <!-- <script src="scripts/visualizer.js"></script> -->
 </html>
