--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container-logo">
         <div class="row">
           <div class="col-md-12">
-            <a href="/" id="logo">
+            <a href="/BE-Link" id="logo">
               <img src="/BE-Link/BE_logo.svg" alt="Benjamin Edgar" />
             </a>
           </div>
