home button link

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="container-logo">
         <div class="row">
           <div class="col-md-12">
-            <a href="/" id="logo">
+            <a href="https://tmytrn.github.io/BE-Link/" id="logo">
               <img src="/BE-Link/BE_logo.svg" alt="Benjamin Edgar" />
             </a>
           </div>
