--- a/index.html
+++ b/index.html
@@ -9,30 +9,7 @@
   <body>
     <div class="wip">WIP</div>
     <div class="dots-wrapper"><div id="dots"></div></div>
-    <div class="sliders" id="sliders">
-      <div class="slider">
-        <label for="size" id="size-label"
-          >Radius: <span id="size-value"></span
-        ></label>
-
-        <input
-          type="range"
-          min="24"
-          max="200"
-          value="81"
-          id="size"
-          name="size"
-          style="display: none"
-        />
-        <div class="hide" id="hide">Change Size</div>
-      </div>
-
-      <!-- <div class="slider">
-        <p>Spacing: <span id="spacing-value"></span></p>
-
-        <input type="range" min="12" max="200" value="64" id="spacing" />
-      </div> -->
-    </div>
+    <div class="sliders" id="sliders"></div>
 
     <header>
       <div class="container-logo">
@@ -77,5 +54,4 @@
     </div>
   </body>
   <script src="/BE-Link/index.js"></script>
-  <!-- <script src="scripts/visualizer.js"></script> -->
 </html>
