breathing first pass

--- a/index.html
+++ b/index.html
@@ -7,51 +7,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <div class="wip">WIP</div>
-    <div class="dots-wrapper"><div id="dots"></div></div>
-    <div class="sliders" id="sliders"></div>
+    <div class="app">
+      <div class="wip">WIP</div>
+      <div class="dots-wrapper"><div id="dots"></div></div>
+      <div class="sliders" id="sliders"></div>
 
-    <header>
-      <div class="container-logo">
-        <div class="row">
-          <div class="col-md-12">
-            <a href="https://tmytrn.github.io/BE-Link/" id="logo">
-              <img src="/BE-Link/BE_logo.svg" alt="Benjamin Edgar" />
+      <header>
+        <div class="container-logo">
+          <div class="row">
+            <div class="col-md-12">
+              <a href="https://tmytrn.github.io/BE-Link/" id="logo">
+                <img src="/BE-Link/BE_logo.svg" alt="Benjamin Edgar" />
+              </a>
+            </div>
+          </div>
+        </div>
+      </header>
+
+      <nav class="nav-index">
+        <a href="#shop">Shop</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
+        <a href="#" id="toggle-dots">Dots On/Off</a>
+      </nav>
+
+      <div class="main">
+        <div class="hero-text">
+          <p>
+            An object company blending a mix of irreverence, intense attention
+            to detail, and a fascination with exploring the application of
+            materials.
+          </p>
+          <p>
+            A framework that delights via the useful and useless while allowing
+            its creator to continue to learn, develop, and play.
+          </p>
+        </div>
+
+        <div class="product">
+          <img src="/BE-Link/cig.jpg" class="product-image" />
+          <div class="description">
+            <a href="#">
+              Single Cigarette Holder in Stainless Steel
+              <p class="price">$110.00</p>
             </a>
           </div>
         </div>
       </div>
-    </header>
-
-    <nav class="nav-index">
-      <a href="#shop">Shop</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-      <a href="#" id="toggle-dots">Dots On/Off</a>
-    </nav>
-
-    <div class="main">
-      <div class="hero-text">
-        <p>
-          An object company blending a mix of irreverence, intense attention to
-          detail, and a fascination with exploring the application of materials.
-        </p>
-        <p>
-          A framework that delights via the useful and useless while allowing
-          its creator to continue to learn, develop, and play.
-        </p>
-      </div>
-
-      <div class="product">
-        <img src="/BE-Link/cig.jpg" clas="product-image" />
-        <div class="description">
-          <a href="#">
-            Single Cigarette Holder in Stainless Steel
-            <p class="price">$110.00</p>
-          </a>
-        </div>
-      </div>
     </div>
   </body>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/underscore@1.13.3/underscore-umd-min.js"></script> -->
+  <script src="/BE-Link/anime.min.js"></script>
   <script src="/BE-Link/index.js"></script>
+
+  <!-- <script src="scripts/visualizer.js"></script> -->
 </html>
